Fixed nav bar on mobile.

--- a/resources/CSS/stylesheet.css
+++ b/resources/CSS/stylesheet.css
@@ -402,65 +402,60 @@
     padding-top: 0;
 }
 
-
-
-
-
-
-
-    /*Screens smaller than 768px (tablet size and below)*/
-    @media (max-width: 768px) {
-        .menu { 
-            display:none;
-            position: absolute;
-            background-color:rgb(37, 37, 37); 
-            right: 0;
-            left: 0;
-            text-align: center;
-            padding: 16px 0;
-        }
-        .menu li:hover {
-            display: inline-block;
-            background-color:#a03939;
-            transition: 0.3s ease;
-        }
-        .menu li + li {
-            margin-top: 12px;
-        }
-        input[type=checkbox]:checked ~ .menu{
-            display: block;
-        }
-        .hamburger {
-            display: block;
-        }
-        .dropdown {
-            left: 50%;
-            top: 30px;
-            transform: translateX(35%);
-            transition: 0.3s ease;
-        }
-        .dropdown li:hover {
-            background-color: #a03939;
-            transition: 0.3s ease;
-        }
-        .YouTube iframe {
-            position: absolute;
-            top: 0;
-            left: 0;
-            width: 100%;
-            height: 100%;
-            border-radius: 10px;
-        }
-        .Google-Maps iframe {
-            margin: 25px 0;
-            overflow: hidden;
-            border-radius: 5px;
-            box-shadow: 0 0 20px rgba(0, 0, 0, 0.15);
-            width:100%;
-        }
-        .front_portrait {
-            width:100%;
-            border-radius: 10px;
-        }
-
+/*Screens smaller than 768px (tablet size and below)*/
+@media (max-width: 768px) {
+    .menu { 
+        display:none;
+        position: absolute;
+        background-color:rgb(37, 37, 37); 
+        right: 0;
+        left: 0;
+        text-align: center;
+        padding: 16px 0;
     }
+    .menu li:hover {
+        display: inline-block;
+        background-color:#a03939;
+        transition: 0.3s ease;
+    }
+    .menu li + li {
+        margin-top: 12px;
+    }
+    input[type=checkbox]:checked ~ .menu{
+        display: block;
+    }
+    .hamburger {
+        display: block;
+    }
+    .dropdown {
+        left: 50%;
+        top: 30px;
+        transform: translateX(35%);
+        transition: 0.3s ease;
+        display:none;
+    }
+    .dropdown li:hover {
+        background-color: #a03939;
+        transition: 0.3s ease;
+    }
+    .YouTube iframe {
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        border-radius: 10px;
+    }
+    .Google-Maps iframe {
+        margin: 25px 0;
+        overflow: hidden;
+        border-radius: 5px;
+        box-shadow: 0 0 20px rgba(0, 0, 0, 0.15);
+        width:100%;
+    }
+    .front_portrait {
+        width:100%;
+        border-radius: 10px;
+    }
+}
+
